♻️ refactor (doctor): la creación de los datos pasa por la lógica del negocio